Fixed center alignment of badges bar.

--- a/_less/main.less
+++ b/_less/main.less
@@ -4,6 +4,14 @@ body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+#badgeBar {
+  text-align:center;
+  background-color:#eee;
+  ul {
+    margin-top:10px;
+  }
+}
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
